# demo-klms

./: pyproject.toml
load_scripts/: client_test.py  license.py
src/stelar/etl/: __init__.py  base.py  datacat.py  goal.py  s3.py  users.py
tests/: conftest.py  test_alg.py  test_catalog.py  test_goal.py
tools/simple_tool/: Dockerfile  Makefile  run.sh  simple_tool.py
